# project_animation

./: .commit_template  .gitignore  README.md  animation.py  commit_message.txt  helpers.py  project.py  pyproject.toml  settings.py  shapes.py
